# work

./: .gitignore
angular/angular-material-sample/: README.md  angular.json  package-lock.json  package.json
angular/firebase-angular-sample/: .firebaserc  README.md  angular.json  firebase.json  karma.conf.js  note.txt  package-lock.json  package.json  tsconfig.json
c++/: bitfield.cc  constexrr.cc  index.cc  lambda1.cc  nouniqueaddress.cc  stringview.cc  tenpu.cc
elixir/: sample1.ex  sample1.exs  sample2.exs
haskell/: base64_decode.hs  conway_game.hs  filelist.hs  fizzbuzz.hs  fusc.hs  gamma.hs  highfunc.hs  marge.hs  sample.hs  server.hs  time.hs  vmstat.hs
haskell/code_golf/: 99_bottles_of_beer.hs  99_bottles_of_beer1.hs  divisors.hs  divisors2.hs
haskell/gui-sample/: .gitignore  ChangeLog.md  README.md  package.yaml
haskell/practice/: package.yaml
haskell/vmstat/: .gitignore  ChangeLog.md  package.yaml
python/: 2048.py  4squares.py  amm.py  automovemouse.py  fizzbuzz1.py  fizzbuzz2.py  fizzbuzz3.py  matlib_samp.py  mron_xlsx.py  show_weather.py  test.py  test2.py  weather_img.py  zip2pdf.py
rp_pico/: 12led_off.py  12led_on.py  main_1.py  matrix_led_pattern.py  matrix_led_pattern2.py  matrix_led_test.py  max7219_led_matrix.py  toggle_10thled.py  toggle_2nd12thled.py  toggle_allled.py  toggle_gp17_led.py  toggle_leftright.py  toggle_notleftright.py  wave_12led.py
rust/100nock/: no01.rs  no02_reminder.rs  no03_input_number.rs  no10_abs.rs  no12_loop.rs  readme.txt
rust/gui/: Cargo.toml
rust/gui/src/: main.rs  main.rs.org
(+72 files in other folders)
