[package]
name = "gui"
version = "0.1.0"
authors = ["Akira Kusumoto <gkusuomto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.gtk]
version = "0.9.0"
feature = ["v3_16"]

[dependencies.gio]
version = "0.9.0"

[dependencies.glib]
version = "0.10.1"
